Set lineheight for headline. Avoid the case it's too long

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ blockquote {
     font-size: 80%;
     font-weight: 500;
     letter-spacing: 0.1em;
+  line-height: 1.5em;
 }
 
 .content {
